--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
 aboutPage: true
 
-markdown: kramdown 
+markdown: redcarpet 
 highlighter: pygments
 
 paginate: 20
 baseurl: /site
-domain_name: 'http://evaneschneider.github.io'
+domain_name: 
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
