--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: pygments
 
 paginate: 20
 baseurl: /site
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://evaneschneider.github.io'
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
