--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ markdown: redcarpet
 highlighter: pygments
 
 paginate: 20
-baseurl: /site
-domain_name: 'http://evaneschneider.github.io'
+baseurl: 
+domain_name: 
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
