Adding figures for dual energy post.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Devo site for Brant 
-description: Blogging about stuffs
+name: "Evan's research blog" 
+description: Blogging about stuff
 
 aboutPage: true
 
