--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Blogging about stuff
 
 aboutPage: true
 
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 
 paginate: 20
